spacing and grammar fixes

--- a/hobbies.html
+++ b/hobbies.html
@@ -8,10 +8,11 @@
     <h3>My Hobbies</h3>
     <ol>
       <li>Programming</li>
+      <li>Music</li>
       <li>Chinese Studies</li>
-      <li>Music (Bass Guitar)</li>
+      <li>Taekwondo</li>
       <li>Biking</li>
-      <li>Video Games</li>
+      <li>Games</li>
     </ol>
   </body>
 </html>
