--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <table cellpadding=20px>
+  <table cellspacing=20px>
     <tr>
       <td>
         <img src="images/harrison-circle.png" alt="harrison kerr profile picture" height=200px>
@@ -15,7 +15,7 @@
       <td>
         <h1>Harrison Kerr</h1>
         <p><em><a href="https://www.clemson.edu/">Clemson</a> Graduate</em></p>
-        <p>I am recent graduate with a BS in Computer Science and Chinese Studies minor.</p>
+        <p>I am a recent graduate with a BS in Computer Science and Chinese Studies minor.</p>
       </td>
     </tr>
   </table>
@@ -28,7 +28,7 @@
   </ul>
   <hr>
   <h3>Work Experience</h3>
-  <table>
+  <table cellspacing=10px>
     <thead>
       <tr>
         <th>Dates</th>
